--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,6 +155,51 @@ footer{
     padding: 10px;
 }
 
+/*event page*/
+
+#image-container,#info-container{
+    margin: 30px;
+}
+
+#image-container{
+    border-radius: 10px;
+
+}
+
+#info-container{
+    font-size: 36px;
+    font-weight: 900;
+}
+
+#info-container p{
+    margin: 0px;
+    font-size: 4px;
+    display: flex;
+}
+
+#info-container h3, #description-container h3{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#info-container ion-icon{
+    font-size: 20px;
+    color: #f2a340;
+    margin-right: 5px;
+}
+
+#info-container #event-submit {
+    margin: 20px 0px;
+
+}
+
+#items-list{
+    list-style: none;
+    padding-left: 0px;
+}
+#items-list li{
+display: flex;
+}
 
 footer p{
     margin-bottom: 0px;
